--- a/addTask/addTask.css
+++ b/addTask/addTask.css
@@ -1,5 +1,8 @@
 * {
     font-family: Inter;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -17,10 +20,6 @@ h1 {
     font-weight: 700;
     line-height: 73.2px;
     text-align: left;
-}
-
-.contentBox {
-    display: flex;
 }
 
 #content-box-left {
@@ -42,8 +41,6 @@ h1 {
 }
 
 #content-box-container {
-    display: flex;
-    justify-content: space-between;
     width: 976.25px;
     height: 424px;
     top: 327px;
@@ -69,7 +66,7 @@ h1 {
 }
 
 #title-input {
-    width: 398px;
+    width: 440px;
     height: 48px;
     padding: 12px 21px 12px 21px;
     gap: 10px;
@@ -149,7 +146,7 @@ h1 {
 }
 
 #date-input {
-    width: 408px;
+    width: 440px;
     height: 48px;
     padding: 12px 16px 12px 16px;
     border-radius: 10px;
@@ -266,7 +263,7 @@ h1 {
 }
 
 #choose-subtasks {
-    width: 408px;
+    width: 440px;
     height: 48px;
     padding: 12px 16px 12px 16px;
     border-radius: 10px;
