--- a/css/summary_user.css
+++ b/css/summary_user.css
@@ -122,6 +122,7 @@ body a {
     transition-timing-function: ease-in-out;
     box-shadow: 0px 5px 2px 0px rgba(0, 0, 0, 0.2);
 }
+
 #mainContentLine2 {
     transition: all 100ms ease-in-out;
 }
@@ -158,12 +159,15 @@ body a {
 .mainContentLineTextTop {
     font-size: 64px;
     font-weight: 600;
+    text-align: center;
 }
 .mainContentLineTextBottom {
     font-size: 20px;
     font-weight: 400;
 }
-
+.center {
+    text-align: center;
+}
 #mainContentLinePartLeft {
     background-color: white;
     width: 235px;
@@ -203,7 +207,7 @@ body a {
     justify-content: center;
     align-items: center;
 }
-#arrow {
+#priorityIcon {
     width: 34px;
     height: 25px;
 }
@@ -255,6 +259,7 @@ body a {
 .mainContentLine3Text {
     font-size: 21px;
     font-weight: 400;
+    text-align: center;
 }
 
 #greeting {
