--- a/addTask/addTask.css
+++ b/addTask/addTask.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline: none;
 }
 
 body {
@@ -123,6 +124,9 @@ h1 {
     line-height: 24px;
     text-align: left;
     cursor: pointer;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
 }
 
 #border-container {
@@ -223,6 +227,7 @@ h1 {
     border-radius: 10px;
     background: #ffffff;
     box-shadow: 0px 0px 4px 0px #0000001a;
+    border: #f6f7f8;
 }
 
 .prio-low-button-bg-color {
