--- a/addTask/addTask.css
+++ b/addTask/addTask.css
@@ -383,3 +383,13 @@ h1 {
 .asterisk {
     color: #ff8190;
 }
+
+#dropdown-list div {
+    padding: 8px 16px;
+    border: 1px solid #d1d1d1;
+    border-radius: 5px;
+    margin-top: 4px;
+    background-color: #f9f9f9;
+    font-size: 18px;
+    font-weight: 400;
+}
