--- a/css/header_and_sidebar.css
+++ b/css/header_and_sidebar.css
@@ -75,6 +75,7 @@ display: none;
     justify-content: space-between;
     align-items: center;
     padding: 64px 0px 64px 0px;
+    box-sizing: content-box;
 }
 
 /* padding-top: 64px; */
