--- a/css/summary_user.css
+++ b/css/summary_user.css
@@ -88,6 +88,31 @@ body a {
     border-radius: 30px;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
 }
+.mainContentLinePart:hover .mainContentLineTextTop {
+    color: white;
+}
+.mainContentLinePart:hover .mainContentLineTextBottom {
+    color: white;
+}
+#mainContentLine2:hover .mainContentLineTextTop {
+    color: white;
+}
+#mainContentLine2:hover .mainContentLineTextBottom {
+    color: white;
+}
+#mainContentLine2:hover #date {
+    color: white;
+}
+#mainContentLine2:hover #upcoming {
+    color: white;
+}
+.mainContentLine3Part:hover .mainContentLine3Number {
+    color: white;
+}
+.mainContentLine3Part:hover .mainContentLine3Text {
+    color: white;
+}
+
 .transformRight:hover {
     cursor: pointer;
     background-color: rgb(42, 54, 71);
@@ -161,6 +186,12 @@ body a {
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
+}
+#amountToDo {
+    font-size: 64px;
+    font-weight: 600;
+    text-align: center;
+    color: black;
 }
 .mainContentLineTextTop {
     font-size: 64px;
