--- a/css/addTask.css
+++ b/css/addTask.css
@@ -13,6 +13,7 @@ body {
     flex-direction: column;
     margin-left: 328px;
     height: 100vh;
+    overflow-y: hidden;
 }
 
 h1 {
@@ -480,8 +481,8 @@ h1 {
     top: 30%;
     left: 50%;
     transform: translate(-50%, -50%) translateY(100vh);
-    opacity: 0;
     transition: transform 0.3s ease-in-out, opacity 0.5s ease-in-out;
+    opacity: 0;
 }
 
 #success-message {
