--- a/css/addTask.css
+++ b/css/addTask.css
@@ -272,12 +272,11 @@ h1 {
     border-radius: 100%;
 }
 
-/* Styling für den Container um das Icon herum */
 .icon-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 24px; /* Gleiche Größe wie das Plus-Icon */
+    width: 24px;
     height: 24px;
     cursor: pointer;
 }
@@ -297,13 +296,33 @@ h1 {
     border-radius: 100%;
 }
 
-#subtask-list {
+#generated-subtask-list-container {
     margin-left: 48.25px;
 }
 
-.subtask-item {
+#new-subtask-list-container {
     margin-top: 16px;
 }
+
+.subtask-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 8px;
+}
+
+.subtask-item:hover {
+    background-color: lightgray;
+    border-radius: 10px;
+}
+
+/* .new-subtask-list-item {
+    padding: 8px;
+} */
+
+/* .new-subtask-list-item:hover {
+    background-color: lightgray;
+    border-radius: 10px;
+} */
 
 /* Clear and AddTask Buttons */
 
@@ -336,8 +355,6 @@ h1 {
 
 #clear-button {
     width: 110px;
-    height: 56px;
-    padding: 16px;
     gap: 4px;
     border-radius: 10px;
     border: 1px solid #2a3647;
@@ -377,13 +394,13 @@ h1 {
 }
 
 #cancel-icon {
-    width: 10.49px;
-    height: 10.49px;
+    width: 14px;
+    height: 14px;
 }
 
 #check-icon {
-    width: 15.49px;
-    height: 11.22px;
+    width: 14px;
+    height: 14px;
 }
 
 .asterisk {
