--- a/board/header_and_sidebar.css
+++ b/board/header_and_sidebar.css
@@ -7,13 +7,12 @@ body {
 }
 
 header {
-
     position: sticky;
     top: 0;
     padding: 20px 40px 20px 348px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
     background-color: white;
-    z-index: 100
+    z-index: 100;
 }
 
 .headerContent {
@@ -24,8 +23,8 @@ header {
 }
 
 .headerLogoMobile img {
-height: 40px;
-display: none;
+    height: 40px;
+    display: none;
 }
 
 .headerSpan {
@@ -38,7 +37,7 @@ display: none;
     border: 2px solid black;
     font-size: 20px;
     font-weight: bold;
-    color: #29ABE2;
+    color: #29abe2;
     cursor: pointer;
     transition: all 100ms ease-in-out;
     height: 56px;
@@ -89,10 +88,10 @@ display: none;
 }
 
 .sideBarMenu img {
-    Width: 25px;
-    Height: 25px;
-    Top: 2.5px;
-    Left: 2.5px;
+    width: 25px;
+    height: 25px;
+    top: 2.5px;
+    left: 2.5px;
 }
 
 .sideBarMenu {
@@ -121,19 +120,21 @@ display: none;
 
 .active {
     background-color: #091931;
-  }
-
-.activeGrey {
-    columns: #A8A8A8;
 }
 
-.policyHref.activeGrey:hover, .noticeHref.activeGrey:hover {
-    color: #A8A8A8;
+.activeGrey {
+    columns: #a8a8a8;
+}
+
+.policyHref.activeGrey:hover,
+.noticeHref.activeGrey:hover {
+    color: #a8a8a8;
     font-weight: normal;
     transform: none;
 }
 
-.policyHref:not(.activeGrey):hover, .noticeHref:not(.activeGrey):hover {
+.policyHref:not(.activeGrey):hover,
+.noticeHref:not(.activeGrey):hover {
     color: rgb(41, 171, 226);
     font-weight: bold;
     transform: scale(1.05);
@@ -168,7 +169,7 @@ display: none;
 .policyHref:hover {
     color: rgb(41, 171, 226);
     font-weight: bold;
-    transform: scale(1.05); 
+    transform: scale(1.05);
 }
 
 .noticeHref:hover {
@@ -189,22 +190,22 @@ display: none;
 @media (max-width: 1360px) {
     header {
         padding: 20px 40px 20px 40px;
-      }
+    }
 
-      .headerContent img {
+    .headerContent img {
         display: block;
-      }
+    }
 
-      .headerSpan {
+    .headerSpan {
         display: none;
-      }
+    }
 
-      .userProfile {
+    .userProfile {
         height: 40px;
         width: 40px;
-      }
+    }
 
-      .sideBar {
+    .sideBar {
         top: auto;
         bottom: 0;
         left: 0;
@@ -218,41 +219,40 @@ display: none;
         align-items: center;
         padding-top: 0;
         padding-bottom: 0;
-      }
+    }
 
-      .imgWrapper img {
+    .imgWrapper img {
         display: none;
-      }
+    }
 
-      .sideBarMenu {
+    .sideBarMenu {
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
         width: 100%;
         margin-bottom: 0;
         height: 80px;
-      }
+    }
 
-      .sideBarMenuButtons {
+    .sideBarMenuButtons {
         flex-direction: column;
         padding-left: 8px;
         width: auto;
         padding: 8px;
         border-radius: 8px;
-      }
+    }
 
-      .sideBarPolicyAndNotice {
+    .sideBarPolicyAndNotice {
         display: none;
-      }
+    }
 }
 
 @media (max-width: 600px) {
-
     .sideBarMenuButtons {
         font-size: 11px;
-      }
-      .sideBarMenu img img {
+    }
+    .sideBarMenu img img {
         width: 20px;
         height: 20px;
-      }
+    }
 }
